--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="cn.yunyunhei.wuhang.myopengldemo">
 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
+    <supports-gl-texture android:name="GL_OES_compressed_ETC1_RGB8_texture" />
+    <supports-gl-texture android:name="GL_OES_compressed_paletted_texture" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +22,10 @@
         </activity>
 
         <activity android:name=".tutorialpart1.TutorialPartVI">
+
+        </activity>
+
+        <activity android:name=".test1.Test1Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
