--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="cn.yunyunhei.wuhang.myopengldemo">
 
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <!-- Tell the system this app requires OpenGL ES 2.0. -->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
-    <supports-gl-texture android:name="GL_OES_compressed_ETC1_RGB8_texture" />
-    <supports-gl-texture android:name="GL_OES_compressed_paletted_texture" />
+    <supports-gl-texture android:name="GL_OES_compressed_ETC1_RGB8_texture"/>
+    <supports-gl-texture android:name="GL_OES_compressed_paletted_texture"/>
 
     <application
         android:allowBackup="true"
@@ -26,12 +29,27 @@
         </activity>
 
         <activity android:name=".test1.Test1Activity">
+
+        </activity>
+
+        <activity
+            android:name=".HomeActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".wuwang.render.FGLViewActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".wuwang.render.ChooseActivity"
+            android:screenOrientation="portrait">
+        </activity>
+
     </application>
 
 </manifest>
